tests/ui/no-multi-same-index-per-field.stderr
error: Index 'name' with type 'exact' has been defined more than once
 --> tests/./ui/no-multi-same-index-per-field.rs:3:10
  |
3 | #[derive(Encryptable)]
  |          ^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `Encryptable` (in Nightly builds, run with -Z macro-backtrace for more info)
