tests/ui/no-multi-same-index-per-field.rs
use cipherstash_dynamodb::Encryptable;

#[derive(Encryptable)]
struct User {
    #[partition_key]
    email: String,
    #[cipherstash(query = "exact")]
    #[cipherstash(query = "exact")]
    name: String,
}

fn main() {}
